maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:14: error: not found: value esFaceMur
    else if( esFaceMur()){droite();}
             ^Escaper:22: error: not found: value placement
while(!estSurBiscuit()){placement()}
                        ^